default/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-service
spec:
  clusterIP: None
  selector:
    component: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
